Github contributions graph in HTML5

--- a/hasancanmiditr.html
+++ b/hasancanmiditr.html
@@ -202,6 +202,8 @@
                 <li class="ms-3">Okuma <strong>B1</strong></li>
             </ul>
         </div>
+        <p class="fw-bolder mt-5 fs-4">GITHUB <i class="bi bi-github"></p>
+        <img src="http://ghchart.rshah.org/hasancanmidi" alt="hasancanmidi's Github chart" />
 
 
     </div>
