--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
             background-color: white;
             color: black;
             transition: background-color 1s ease, color 1s ease;
-            font-family:'Montserrat', sans-serif;;
+            font-family: 'Montserrat', sans-serif;
+            ;
 
         }
 
@@ -58,15 +59,16 @@
 
 <body>
     <div class="d-flex justify-content-between">
-    <button><a href="hasancanmiditr.html" class=" text-decoration-none">Türkçe</a></button>
-    <button onclick="myFunction()"><i class="bi bi-moon-fill"></i>
-        <i class="bi bi-sun-fill"></i></i></button>
+        <button><a href="hasancanmiditr.html" class=" text-decoration-none">Türkçe</a></button>
+        <button onclick="myFunction()"><i class="bi bi-moon-fill"></i>
+            <i class="bi bi-sun-fill"></i></i></button>
     </div>
     <h1 class="fw-bolder fs-1">HASAN CAN MİDİ</h1>
 
     <div class="container">
         <ul class="horizontal mt-3">
-            <li class=""><a class="text-decoration-none " href="https://mail.google.com/mail/?view=cm&fs=1&to=hasancanmidi@hotmail.com"><i
+            <li class=""><a class="text-decoration-none "
+                    href="https://mail.google.com/mail/?view=cm&fs=1&to=hasancanmidi@hotmail.com"><i
                         class="bi bi-envelope-fill"></i>
                     Mail</a></li>
             <li class="ms-4"><a class="text-decoration-none"
@@ -202,6 +204,9 @@
                 <li class="ms-3">Reading <strong>B1</strong></li>
             </ul>
         </div>
+        <p class="fw-bolder mt-5 fs-4">GITHUB <i class="bi bi-github"></p>
+        <img src="http://ghchart.rshah.org/hasancanmidi" alt="hasancanmidi's Github chart" />
+        
 
 
     </div>
@@ -212,6 +217,7 @@
             element.classList.toggle("dark-mode");
         }
     </script>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
