--- a/index.html
+++ b/index.html
@@ -3,62 +3,18 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="color-scheme" content="light dark">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="favicon-96x96.png">
     <title>Hasan Can Midi</title>
-    <style>
-        body {
-            padding: 5% 15%;
-            margin: 0;
-            text-align: center;
-            background-color: white;
-            color: black;
-            transition: background-color 1s ease, color 1s ease;
-            font-family: 'Montserrat', sans-serif;
-            ;
-
-        }
-
-        a {
-            color: black;
-        }
-
-        a:hover {
-            color: black;
-        }
-
-        .dark-mode {
-            background-color: black;
-            color: white;
-        }
-
-        .dark-mode a {
-            color: white;
-        }
-
-        .dark-mode a:hover {
-            color: white;
-        }
-
-        .horizontal {
-            display: flex;
-            flex-direction: row;
-            list-style-type: none;
-            justify-content: center;
-        }
-
-        button {
-            float: left;
-        }
-    </style>
 </head>
 
 <body>
-    <div class="d-flex justify-content-between">
+    <div class="d-flex justify-content-between mb-4">
         <button><a href="hasancanmiditr.html" class=" text-decoration-none">Türkçe</a></button>
         <button onclick="myFunction()"><i class="bi bi-moon-fill"></i>
             <i class="bi bi-sun-fill"></i></i></button>
@@ -66,7 +22,7 @@
     <h1 class="fw-bolder fs-1">HASAN CAN MİDİ</h1>
 
     <div class="container">
-        <ul class="horizontal mt-3">
+        <ul class="horizontal-2 mt-3">
             <li class=""><a class="text-decoration-none "
                     href="https://mail.google.com/mail/?view=cm&fs=1&to=hasancanmidi@hotmail.com"><i
                         class="bi bi-envelope-fill"></i>
@@ -80,7 +36,7 @@
                     href="https://www.google.com/maps/place/Kartal%2F%C4%B0stanbul/data=!4m2!3m1!1s0x14cac4f1dd92e915:0x7bf91a7dd7b26dcc?sa=X&ved=2ahUKEwihysbKwaGDAxUjxAIHHQSGB7QQ8gF6BAgQEAA">Istanbul
                     / Kartal</a></li>
         </ul>
-        <ul class="horizontal">
+        <ul class="horizontal-2">
             <li><strong>Date Of birth:</strong> 10.03.1999</li>
             <li class="ms-2"><strong>Gender:</strong> Male</li>
             <li class="ms-2"><strong>Nationality:</strong> Turkish</li>
@@ -106,20 +62,20 @@
             <li class="ms-1">React</li>
         </ul>
         <p class="fw-bolder mt-5 fs-4">EDUCATION</p>
-        <ul class="horizontal">
+        <ul class="horizontal-2">
             <li>Associate's Degree</li>
             <li class="ms-3">Computer Programming</li>
             <li class="ms-3">Avrasya University</li>
             <li class="ms-3">2021</li>
         </ul>
-        <ul class="horizontal">
+        <ul class="horizontal-2">
             <li class="ms-3">Ecole <em><strong>42</strong></em></li>
             <li class="ms-3">Current</li>
         </ul>
         <p class="fw-bolder mt-5 fs-4">PROFESSIONAL EXPERIENCE</p>
 
         <div>
-            <ul class="horizontal d-flex justify-content-between m-0">
+            <ul class="horizontal-2 d-flex justify-content-between m-0">
                 <li><strong>MedyaE</strong> ,Istanbul</li>
                 <li>Current 2023</li>
             </ul>
@@ -134,8 +90,8 @@
             </ul>
         </div>
         <p class="fw-bolder mt-5 fs-4">EARLIER WORK EXPERIENCE</p>
-        <div class="mt-4">
-            <ul class="horizontal d-flex justify-content-between m-0">
+        <div class="mt-5">
+            <ul class="horizontal-2 d-flex justify-content-between m-0">
                 <li><strong>Beto Yazılım</strong> ,Trabzon</li>
                 <li>March 2019</li>
             </ul>
@@ -148,8 +104,8 @@
                     world. Skills I acquired Html, Css and First iOS computer experience</li>
             </ul>
         </div>
-        <div class="mt-4">
-            <ul class="horizontal d-flex justify-content-between m-0">
+        <div class="mt-5">
+            <ul class="horizontal-2 d-flex justify-content-between m-0">
                 <li><strong>Tierra Techo Trabajo</strong> ,Italia</li>
                 <li>November 2021</li>
             </ul>
@@ -162,8 +118,8 @@
                     at the institution. We created web designs using HTML, CSS, and JavaScript</li>
             </ul>
         </div>
-        <div class="mt-4">
-            <ul class="horizontal d-flex justify-content-between m-0">
+        <div class="mt-5">
+            <ul class="horizontal-2 d-flex justify-content-between m-0">
                 <li><strong>Afad</strong> ,Kahramanmaraş</li>
                 <li>February 2023</li>
             </ul>
@@ -197,16 +153,164 @@
         </div>
         <p class="fw-bolder mt-5 fs-4">LANGUAGE SKILLS</p>
         <div>
-            <ul class="horizontal">
+            <ul class="horizontal-2">
                 <li><strong>English</strong></li>
                 <li class="ms-3">Speaking <strong>A2</strong></li>
                 <li class="ms-3">Listening <strong>B1</strong></li>
                 <li class="ms-3">Reading <strong>B1</strong></li>
             </ul>
         </div>
-        <p class="fw-bolder mt-5 fs-4">GITHUB <i class="bi bi-github"></p>
-        <img src="http://ghchart.rshah.org/hasancanmidi" alt="hasancanmidi's Github chart" />
-        
+        <p class="fw-bolder mt-5 fs-4">GITHUB <i class="bi bi-github"></i></p>
+        <img class="github" src="http://ghchart.rshah.org/hasancanmidi" style="width: 80%; height: 5%;"
+            alt="hasancanmidi's Github chart" />
+        <p class="fw-bolder mt-5 fs-4">PROJECTS</p>
+
+        <div class="container text-center ">
+            <div class="card-group">
+                <div class="row">
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="card mb-3 card-project">
+                            <img src="github-wallpaper-scaled.webp" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Rent a Car Project</h5>
+                                <p class="card-text">The projects where we received training on C#, Layered
+                                    Architecture, .NET, LINQ, and React from Engin Demiroğ's team.</p>
+                                <h6 class="card-title">Contributors</h6>
+                                <ul class="horizontal-2">
+                                    <li><a href="https://github.com/hasancanmidi" target="_blank"><img
+                                                src="https://avatars.githubusercontent.com/u/74327275?s=64&v=4"
+                                                class="rounded-circle me-4" style="width: 35px; height: 35px;"
+                                                alt="..."></a></li>
+                                </ul>
+                                <p class="card-text"><small class="text-body-secondary"><a
+                                            href="https://github.com/hasancanmidi/Tobeto-EnginDemirog-Academy/tree/main/nLayeredApp">Project
+                                            Link </a><i class="bi bi-github"></i></small></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="card mb-3 card-project">
+                            <img src="github-wallpaper-scaled.webp" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Tobeto Project</h5>
+                                <p class="card-text">We are developing the website for Tobeto educational institution
+                                    with our team, handling both the Back-End and Front-End</p>
+                                <h6 class="card-title">Contributors</h6>
+                                <ul class="horizontal-2">
+                                    <li><a href="https://github.com/guluzarkarakoc" target="_blank"><img
+                                                src="https://avatars.githubusercontent.com/u/146974426?s=64&v=4"
+                                                class="rounded-circle" style="width: 35px; height: 35px;" alt="..."></a>
+                                    </li>
+                                    <li><a href="https://github.com/hasancanmidi" target="_blank"><img
+                                                src="https://avatars.githubusercontent.com/u/74327275?s=64&v=4"
+                                                class="rounded-circle" style="width: 35px; height: 35px;" alt="..."></a>
+                                    </li>
+                                    <li><a href="https://github.com/Ayse-nur23" target="_blank"><img
+                                                src="https://avatars.githubusercontent.com/u/77544969?s=64&v=4"
+                                                class="rounded-circle" style="width: 35px; height: 35px;" alt="..."></a>
+                                    </li>
+                                    <li><a href="https://github.com/fdemirag" target="_blank"><img
+                                                src="https://avatars.githubusercontent.com/u/123840399?s=64&v=4"
+                                                class="rounded-circle" style="width: 35px; height: 35px;" alt="..."></a>
+                                    </li>
+                                    <li><a href="https://github.com/ahmetgl1" target="_blank"><img
+                                                src="https://avatars.githubusercontent.com/u/81171832?s=64&v=4"
+                                                class="rounded-circle" style="width: 35px; height: 35px;" alt="..."></a>
+                                    </li>
+                                    <li><a href="https://github.com/hasankesil" target="_blank"><img
+                                                src="https://avatars.githubusercontent.com/u/118971537?s=70&v=4"
+                                                class="rounded-circle me-4" style="width: 35px; height: 35px;"
+                                                alt="..."></a></li>
+                                </ul>
+                                <p class="card-text"><small class="text-body-secondary"><a
+                                            href="https://github.com/hasancanmidi/Tobeto-EnginDemirog-Academy/tree/main/nLayeredApp">Project
+                                            Link </a> <i class="bi bi-github"></i></small></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="card mb-3 card-project">
+                            <img src="github-wallpaper-scaled.webp" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Game Project</h5>
+                                <p class="card-text">The projects where we received training on C#, Layered
+                                    Architecture, .NET, LINQ, and React from Engin Demiroğ's team.</p>
+                                <h6 class="card-title">Contributors</h6>
+                                <ul class="horizontal-2">
+                                    <li><a href="https://github.com/hasancanmidi" target="_blank"><img
+                                                src="https://avatars.githubusercontent.com/u/74327275?s=64&v=4"
+                                                class="rounded-circle me-4" style="width: 35px; height: 35px;"
+                                                alt="..."></a></li>
+                                </ul>
+                                <p class="card-text"><small class="text-body-secondary"><a
+                                            href="https://github.com/hasancanmidi/Tobeto-EnginDemirog-Academy/tree/main/nLayeredApp">Project
+                                            Link </a><i class="bi bi-github"></i></small></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="card mb-3 card-project">
+                            <img src="github-wallpaper-scaled.webp" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Deressa Beauty Salon</h5>
+                                <p class="card-text">Not started yet...</p>
+                                <h6 class="card-title">Contributors</h6>
+                                <ul class="horizontal-2">
+                                    <li><a href="https://github.com/hasancanmidi" target="_blank"><img
+                                                src="https://avatars.githubusercontent.com/u/74327275?s=64&v=4"
+                                                class="rounded-circle me-1" style="width: 35px; height: 35px;"
+                                                alt="..."></a></li>
+                                    <li><a href="https://github.com/necla-sabahoglu" target="_blank"><img
+                                                src="https://avatars.githubusercontent.com/u/51532322?v=4"
+                                                class="rounded-circle me-4" style="width: 35px; height: 35px;"
+                                                alt="..."></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="card mb-3 card-project">
+                            <img src="github-wallpaper-scaled.webp" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">E-Commerce Project</h5>
+                                <p class="card-text">The projects where we received training on C#, Layered
+                                    Architecture, .NET, LINQ, and React from Engin Demiroğ's team.</p>
+                                <h6 class="card-title">Contributors</h6>
+                                <ul class="horizontal-2">
+                                    <li><a href="https://github.com/hasancanmidi" target="_blank"><img
+                                                src="https://avatars.githubusercontent.com/u/74327275?s=64&v=4"
+                                                class="rounded-circle me-4" style="width: 35px; height: 35px;"
+                                                alt="..."></a></li>
+                                </ul>
+                                <p class="card-text"><small class="text-body-secondary"><a
+                                            href="https://github.com/hasancanmidi/Tobeto-EnginDemirog-Academy/tree/main/nLayeredApp">Project
+                                            Link </a><i class="bi bi-github"></i></small></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="card mb-3 card-project">
+                            <img src="github-wallpaper-scaled.webp" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">E-Commerce Project 2</h5>
+                                <p class="card-text">The projects where we received training on C#, Layered
+                                    Architecture, .NET, LINQ, and React from Engin Demiroğ's team.</p>
+                                <h6 class="card-title">Contributors</h6>
+                                <ul class="horizontal-2">
+                                    <li><a href="https://github.com/hasancanmidi" target="_blank"><img
+                                                src="https://avatars.githubusercontent.com/u/74327275?s=64&v=4"
+                                                class="rounded-circle me-4" style="width: 35px; height: 35px;"
+                                                alt="..."></a></li>
+                                </ul>
+                                <p class="card-text"><small class="text-body-secondary"><a
+                                            href="https://github.com/hasancanmidi/Tobeto-EnginDemirog-Academy/tree/main/nLayeredApp">Project
+                                            Link </a><i class="bi bi-github"></i></small></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
     </div>
