--- a/hasancanmiditr.html
+++ b/hasancanmiditr.html
@@ -180,7 +180,7 @@
                                                 alt="..."></a></li>
                                 </ul>
                                 <p class="card-text"><small class="text-body-secondary"><a
-                                            href="https://github.com/hasancanmidi/Tobeto-EnginDemirog-Academy/tree/main/nLayeredApp">Proje
+                                            href="https://github.com/hasancanmidi/Tobeto-EnginDemirog-Academy/tree/main/GameProjectDemo">Proje
                                             Linki </a><i class="bi bi-github"></i></small></p>
                             </div>
                         </div>
@@ -219,7 +219,7 @@
                                                 alt="..."></a></li>
                                 </ul>
                                 <p class="card-text"><small class="text-body-secondary"><a
-                                            href="https://github.com/hasancanmidi/Tobeto-EnginDemirog-Academy/tree/main/nLayeredApp">Proje
+                                            href="https://github.com/Tobeto-Pair1/Tobeto_">Proje
                                             Linki </a> <i class="bi bi-github"></i></small></p>
                             </div>
                         </div>
@@ -228,7 +228,7 @@
                         <div class="card mb-3 card-project">
                             <img src="github-wallpaper-scaled.webp" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Araba Kiralama Projesi</h5>
+                                <h5 class="card-title">Oyun Projesi</h5>
                                 <p class="card-text">Engin demiroğ'un ekibinden C#, Katmanlı Mimari, .Net ,Linq ve React Eğitimi gördüğümüz projeler.</p>
                                 <h6 class="card-title">Katkıda Bulunanlar</h6>
                                 <ul class="horizontal-2">
@@ -238,7 +238,7 @@
                                                 alt="..."></a></li>
                                 </ul>
                                 <p class="card-text"><small class="text-body-secondary"><a
-                                            href="https://github.com/hasancanmidi/Tobeto-EnginDemirog-Academy/tree/main/nLayeredApp">Proje
+                                            href="https://github.com/hasancanmidi/Tobeto-EnginDemirog-Academy/tree/main/GameProjectDemo">Proje
                                             Linki</a><i class="bi bi-github"></i></small></p>
                             </div>
                         </div>
@@ -296,7 +296,7 @@
                                                 alt="..."></a></li>
                                 </ul>
                                 <p class="card-text"><small class="text-body-secondary"><a
-                                            href="https://github.com/hasancanmidi/Tobeto-EnginDemirog-Academy/tree/main/nLayeredApp">Proje
+                                            href="https://github.com/hasancanmidi/Tobeto-EnginDemirog-Academy/tree/main/FinalProject">Proje
                                             Linki </a><i class="bi bi-github"></i></small></p>
                             </div>
                         </div>
