I Added flag and experience

--- a/hasancanmiditr.html
+++ b/hasancanmiditr.html
@@ -76,7 +76,7 @@
 
         <div>
             <ul class="horizontal d-flex justify-content-between m-0">
-                <li><strong>MedyaE</strong> ,Istanbul</li>
+                <li><strong>MedyaE</strong> ,Istanbul 🇹🇷</li>
                 <li>Devam Ediyor 2023</li>
             </ul>
             <ul class="d-flex justify-content-start">
@@ -92,7 +92,7 @@
         <p class="fw-bolder mt-5 fs-4">STAJ DENEYİMLERİM</p>
         <div class="mt-5">
             <ul class="horizontal d-flex justify-content-between m-0">
-                <li><strong>Beto Yazılım</strong> ,Trabzon</li>
+                <li><strong>Beto Yazılım</strong> ,Trabzon 🇹🇷</li>
                 <li>Mart 2019</li>
             </ul>
             <ul class="d-flex justify-content-start">
@@ -105,7 +105,7 @@
         </div>
         <div class="mt-5">
             <ul class="horizontal d-flex justify-content-between m-0">
-                <li><strong>Tierra Techo Trabajo</strong> ,İtalya</li>
+                <li><strong>Tierra Techo Trabajo</strong> ,İtalya 🇮🇹</li>
                 <li>Kasım 2021</li>
             </ul>
             <ul class="d-flex justify-content-start">
@@ -119,7 +119,19 @@
         </div>
         <div class="mt-5">
             <ul class="horizontal d-flex justify-content-between m-0">
-                <li><strong>Afad</strong> ,Kahramanmaraş</li>
+                <li><strong>Serbest</strong> ,Malta 🇲🇹</li>
+                <li>2022</li>
+            </ul>
+            <ul class="d-flex justify-content-start">
+                <li class="list-unstyled"><strong>Serbest Programcı</strong></li>
+            </ul>
+            <ul class="ps-5 mt-4">
+                <li class="text-start">Malta'da yaşadığım  1 yıl boyunca, Pazarlamacı gibi iş yerlerine gidip anlaşıp dijital işlerini yapıyordum. 200'ün üzerinde google business hesabı açıp yönettim, doğru bir profille müşterilerini arttırdım ve gerektiğinde sosyal medyalarını yönettim. Bazı kebap restaurantlarına web siteler yaptım. </li>
+            </ul>
+        </div>
+        <div class="mt-5">
+            <ul class="horizontal d-flex justify-content-between m-0">
+                <li><strong>Afad</strong> ,Kahramanmaraş 🇹🇷</li>
                 <li>Şubat 2023</li>
             </ul>
             <ul class="d-flex justify-content-start">
