--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         <div>
             <ul class="horizontal-2 d-flex justify-content-between m-0">
-                <li><strong>MedyaE</strong> ,Istanbul</li>
+                <li><strong>MedyaE</strong> ,Istanbul 🇹🇷</li>
                 <li>Current 2023</li>
             </ul>
             <ul class="d-flex justify-content-start">
@@ -92,7 +92,7 @@
         <p class="fw-bolder mt-5 fs-4">EARLIER WORK EXPERIENCE</p>
         <div class="mt-5">
             <ul class="horizontal-2 d-flex justify-content-between m-0">
-                <li><strong>Beto Yazılım</strong> ,Trabzon</li>
+                <li><strong>Beto Yazılım</strong> ,Trabzon 🇹🇷</li>
                 <li>March 2019</li>
             </ul>
             <ul class="d-flex justify-content-start">
@@ -106,7 +106,7 @@
         </div>
         <div class="mt-5">
             <ul class="horizontal-2 d-flex justify-content-between m-0">
-                <li><strong>Tierra Techo Trabajo</strong> ,Italia</li>
+                <li><strong>Tierra Techo Trabajo</strong> ,Italia 🇮🇹</li>
                 <li>November 2021</li>
             </ul>
             <ul class="d-flex justify-content-start">
@@ -119,8 +119,20 @@
             </ul>
         </div>
         <div class="mt-5">
+            <ul class="horizontal d-flex justify-content-between m-0">
+                <li><strong>Freelancer</strong> ,Malta 🇲🇹</li>
+                <li>2022</li>
+            </ul>
+            <ul class="d-flex justify-content-start">
+                <li class="list-unstyled"><strong>Freelancer</strong></li>
+            </ul>
+            <ul class="ps-5 mt-4">
+                <li class="text-start">During my one-year stay in Malta, I used to visit businesses as a marketer, negotiate, and carry out their digital tasks. I opened and managed over 200 Google Business accounts, increased their customer base with accurate profiles, and occasionally managed their social media. I also created websites for some kebab restaurants. </li>
+            </ul>
+        </div>
+        <div class="mt-5">
             <ul class="horizontal-2 d-flex justify-content-between m-0">
-                <li><strong>Afad</strong> ,Kahramanmaraş</li>
+                <li><strong>Afad</strong> ,Kahramanmaraş 🇹🇷</li>
                 <li>February 2023</li>
             </ul>
             <ul class="d-flex justify-content-start">
