I Added Database Entity Schema

--- a/hasancanmiditr.html
+++ b/hasancanmiditr.html
@@ -126,7 +126,10 @@
                 <li class="list-unstyled"><strong>Serbest Programcı</strong></li>
             </ul>
             <ul class="ps-5 mt-4">
-                <li class="text-start">Malta'da yaşadığım  1 yıl boyunca, Pazarlamacı gibi iş yerlerine gidip anlaşıp dijital işlerini yapıyordum. 200'ün üzerinde google business hesabı açıp yönettim, doğru bir profille müşterilerini arttırdım ve gerektiğinde sosyal medyalarını yönettim. Bazı kebap restaurantlarına web siteler yaptım. </li>
+                <li class="text-start">Malta'da yaşadığım 1 yıl boyunca, Pazarlamacı gibi iş yerlerine gidip anlaşıp
+                    dijital işlerini yapıyordum. 200'ün üzerinde google business hesabı açıp yönettim, doğru bir
+                    profille müşterilerini arttırdım ve gerektiğinde sosyal medyalarını yönettim. Bazı kebap
+                    restaurantlarına web siteler yaptım. </li>
             </ul>
         </div>
         <div class="mt-5">
@@ -183,7 +186,8 @@
                             <img src="github-wallpaper-scaled.webp" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Araba Kiralama Projesi</h5>
-                                <p class="card-text">The projects where we received training on C#, Layered Architecture, .NET, LINQ, and React from Engin Demiroğ's team.</p>
+                                <p class="card-text">The projects where we received training on C#, Layered
+                                    Architecture, .NET, LINQ, and React from Engin Demiroğ's team.</p>
                                 <h6 class="card-title">Katkıda Bulunanlar</h6>
                                 <ul class="horizontal-2">
                                     <li><a href="https://github.com/hasancanmidi" target="_blank"><img
@@ -202,7 +206,8 @@
                             <img src="github-wallpaper-scaled.webp" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Tobeto Projesi</h5>
-                                <p class="card-text">Tobeto eğitim kurumunun web sitesinin Back-End ve Front-End'ini ekibimizle yapıyoruz.</p>
+                                <p class="card-text">Tobeto eğitim kurumunun web sitesinin Back-End ve Front-End'ini
+                                    ekibimizle yapıyoruz.</p>
                                 <h6 class="card-title">Katkıda Bulunanlar</h6>
                                 <ul class="horizontal-2">
                                     <li><a href="https://github.com/guluzarkarakoc" target="_blank"><img
@@ -241,7 +246,8 @@
                             <img src="github-wallpaper-scaled.webp" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Oyun Projesi</h5>
-                                <p class="card-text">Engin demiroğ'un ekibinden C#, Katmanlı Mimari, .Net ,Linq ve React Eğitimi gördüğümüz projeler.</p>
+                                <p class="card-text">Engin demiroğ'un ekibinden C#, Katmanlı Mimari, .Net ,Linq ve React
+                                    Eğitimi gördüğümüz projeler.</p>
                                 <h6 class="card-title">Katkıda Bulunanlar</h6>
                                 <ul class="horizontal-2">
                                     <li><a href="https://github.com/hasancanmidi" target="_blank"><img
@@ -280,7 +286,8 @@
                             <img src="github-wallpaper-scaled.webp" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">E Ticaret Projesi</h5>
-                                <p class="card-text">Engin demiroğ'un ekibinden C#, Katmanlı Mimari, .Net ,Linq ve React Eğitimi gördüğümüz projeler.</p>
+                                <p class="card-text">Engin demiroğ'un ekibinden C#, Katmanlı Mimari, .Net ,Linq ve React
+                                    Eğitimi gördüğümüz projeler.</p>
                                 <h6 class="card-title">Katkıda Bulunanlar</h6>
                                 <ul class="horizontal-2">
                                     <li><a href="https://github.com/hasancanmidi" target="_blank"><img
@@ -299,7 +306,8 @@
                             <img src="github-wallpaper-scaled.webp" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">E-Ticaret Projesi 2</h5>
-                                <p class="card-text">Engin demiroğ'un ekibinden C#, Katmanlı Mimari, .Net ,Linq ve React Eğitimi gördüğümüz projeler.</p>
+                                <p class="card-text">Engin demiroğ'un ekibinden C#, Katmanlı Mimari, .Net ,Linq ve React
+                                    Eğitimi gördüğümüz projeler.</p>
                                 <h6 class="card-title">Katkıda Bulunanlar</h6>
                                 <ul class="horizontal-2">
                                     <li><a href="https://github.com/hasancanmidi" target="_blank"><img
@@ -310,6 +318,9 @@
                                 <p class="card-text"><small class="text-body-secondary"><a
                                             href="https://github.com/hasancanmidi/Tobeto-EnginDemirog-Academy/tree/main/FinalProject">Proje
                                             Linki </a><i class="bi bi-github"></i></small></p>
+                                <p class="card-text"><small class="text-body-secondary"><a
+                                            href="https://whimsical.com/final-project-entities-mind-map-P6Ba7k28MdoMUj1vwo9GhL"
+                                            target="_blank">Veritabanı Varlık Şeması</a></small></p>
                             </div>
                         </div>
                     </div>
