--- a/index.html
+++ b/index.html
@@ -127,7 +127,10 @@
                 <li class="list-unstyled"><strong>Freelancer</strong></li>
             </ul>
             <ul class="ps-5 mt-4">
-                <li class="text-start">During my one-year stay in Malta, I used to visit businesses as a marketer, negotiate, and carry out their digital tasks. I opened and managed over 200 Google Business accounts, increased their customer base with accurate profiles, and occasionally managed their social media. I also created websites for some kebab restaurants. </li>
+                <li class="text-start">During my one-year stay in Malta, I used to visit businesses as a marketer,
+                    negotiate, and carry out their digital tasks. I opened and managed over 200 Google Business
+                    accounts, increased their customer base with accurate profiles, and occasionally managed their
+                    social media. I also created websites for some kebab restaurants. </li>
             </ul>
         </div>
         <div class="mt-5">
@@ -317,6 +320,8 @@
                                 <p class="card-text"><small class="text-body-secondary"><a
                                             href="https://github.com/hasancanmidi/Tobeto-EnginDemirog-Academy/tree/main/FinalProject">Project
                                             Link </a><i class="bi bi-github"></i></small></p>
+                                <p class="card-text"><small class="text-body-secondary"><a
+                                            href="https://whimsical.com/final-project-entities-mind-map-P6Ba7k28MdoMUj1vwo9GhL" target="_blank">Database Entity Schema </a></small></p>
                             </div>
                         </div>
                     </div>
