--- a/hasancanmiditr.html
+++ b/hasancanmiditr.html
@@ -327,7 +327,24 @@
                 </div>
             </div>
         </div>
+        <p class="fw-bolder mt-5 fs-4">MEDIUM <i class="bi bi-medium"></i></p>
 
+        <div class="container text-center ">
+            <div class="card-group">
+                <div class="row">
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="card mb-3 card-project">
+                            <img src="databasenormalisation.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Veritabanında Normalizasyon: Neden ve Nasıl ?</h5>
+                                <p class="card-text">Veritabanı normalizasyonu, veritabanlarındaki verileri daha verimli ve etkili bir şekilde depolamak ve yönetmek için kullanılan bir süreçtir...</p>
+                                <p class="card-text"><small class="text-body-secondary"><a
+                                            href="https://medium.com/@hasancanmidi/veritaban%C4%B1-normalizasyonu-neden-ve-nas%C4%B1l-853b26415312" target="_blank">Medium Linki  <i class="bi bi-medium"></i></a></small></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
     </div>
 
     <script>
