--- a/index.html
+++ b/index.html
@@ -321,32 +321,48 @@
                                             href="https://github.com/hasancanmidi/Tobeto-EnginDemirog-Academy/tree/main/FinalProject">Project
                                             Link </a><i class="bi bi-github"></i></small></p>
                                 <p class="card-text"><small class="text-body-secondary"><a
-                                            href="https://whimsical.com/final-project-entities-mind-map-P6Ba7k28MdoMUj1vwo9GhL" target="_blank">Database Entity Schema </a></small></p>
+                                            href="https://whimsical.com/final-project-entities-mind-map-P6Ba7k28MdoMUj1vwo9GhL"
+                                            target="_blank">Database Entity Schema </a></small></p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <p class="fw-bolder mt-5 fs-4">MEDIUM <i class="bi bi-medium"></i></p>
+
+        <div class="container text-center ">
+            <div class="card-group">
+                <div class="row">
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="card mb-3 card-project">
+                            <img src="databasenormalisation.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Database Normalization: Why and How (Turkish)</h5>
+                                <p class="card-text">Database normalization is a process used to store and manage data in databases more efficiently and effectively...</p>
+                                <p class="card-text"><small class="text-body-secondary"><a
+                                            href="https://medium.com/@hasancanmidi/veritaban%C4%B1-normalizasyonu-neden-ve-nas%C4%B1l-853b26415312" target="_blank">Medium Linki  <i class="bi bi-medium"></i></a></small></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <script>
+                function myFunction() {
+                    var element = document.body;
+                    element.classList.toggle("dark-mode");
+                }
+            </script>
 
 
-    </div>
-
-    <script>
-        function myFunction() {
-            var element = document.body;
-            element.classList.toggle("dark-mode");
-        }
-    </script>
-
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-        crossorigin="anonymous"></script>
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+                integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+                crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+                integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+                crossorigin="anonymous"></script>
 </body>
 
 </html>
